2010-09-23  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Roben.

        Add handling for form data and additional HTTP headers in ResourceHandleWin
        https://bugs.webkit.org/show_bug.cgi?id=46369

        * platform/network/win/ResourceHandleWin.cpp:
        (WebCore::ResourceHandle::start):

2010-09-23  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser

        'seeking' event should always fire
        https://bugs.webkit.org/show_bug.cgi?id=45694

        Update seek algorithm to match current spec.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::setReadyState): Don't need to fire 'seeking' event here.
        (WebCore::HTMLMediaElement::seek): Always fire 'seeking'. Update comments.
        (WebCore::HTMLMediaElement::finishSeek): Update comments.
        (WebCore::HTMLMediaElement::mediaPlayerTimeChanged): Ditto.

2010-09-23  Eric Uhrhane  <ericu@chromium.org>

        Reviewed by David Levin.

        Rename FileWriterClient to AsyncFileWriterClient.
        https://bugs.webkit.org/show_bug.cgi?id=46325

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * fileapi/AsyncFileWriter.h:
        * fileapi/AsyncFileWriterClient.h: Copied from WebCore/fileapi/FileWriterClient.h.
        * fileapi/FileWriter.h:
        * fileapi/FileWriterClient.h: Removed.
        * platform/AsyncFileSystem.h:

2010-09-23  David Hyatt  <hyatt@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=46378, rename width/height on line boxes to logicalWidth/logicalHeight.

        * editing/visible_units.cpp:
        (WebCore::previousLinePosition):
        (WebCore::nextLinePosition):
        * rendering/EllipsisBox.cpp:
        (WebCore::EllipsisBox::paint):
        (WebCore::EllipsisBox::paintSelection):
        (WebCore::EllipsisBox::nodeAtPoint):