@@ -2,6 +2,17 @@
 
         Reviewed by Adam Roben.
 
+        Fix ResourceHandleWin::cancel() for network resources 
+        https://bugs.webkit.org/show_bug.cgi?id=46383
+
+        * platform/network/win/ResourceHandleWin.cpp:
+        (WebCore::ResourceHandle::onRequestComplete): Check it requestHandle is not 0.
+        (WebCore::ResourceHandle::cancel): Set requestHandle to 0.
+
+2010-09-23  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Adam Roben.
+
         Add handling for form data and additional HTTP headers in ResourceHandleWin
         https://bugs.webkit.org/show_bug.cgi?id=46369
 
